Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58316

qtwebkit build failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.9.0 Alpha
    • 5.9.0 Alpha
    • WebKit
    • None
    • 37f9c3ea771ce340e1d0e474930798a3c188055b

      https://codereview.qt-project.org/#/c/182100/ PS11
      https://codereview.qt-project.org/#/c/183013/
      http://testresults.qt.io/coin/integration/qt/qt5/tasks/1484942943
      http://testresults.qt.io/logs/qt/qtwebkit/4af8040a4e0d21181e6af7c6aee2509fd4577d5e/OSXOSX_10_10x86_64OSXOSX_10_10x86_64Clangqtci-osx-10.10-x86_64-10f9f6Release_NoFramework/ddcc0e461c9cfa56a5738af6ec00207aa9bb8524/buildlog.txt.gz

      macOS 10.10

      ...
      In file included from WebKit/qt/WidgetApi/qwebpage.cpp:30:
      In file included from WebKit/qt/WidgetSupport/PageClientQt.h:32:
      In file included from WebKit/qt/WidgetApi/qwebframe_p.h:24:
      In file included from WebKit/qt/WebCoreSupport/QWebFrameAdapter.h:23:
      WebKit/qt/WebCoreSupport/FrameLoaderClientQt.h:227:48: warning: 'createNetworkingContext' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
          virtual PassRefPtr<FrameNetworkingContext> createNetworkingContext();
                                                     ^
      WebCore/loader/FrameLoaderClient.h:320:52: note: overridden virtual function is here
              virtual PassRefPtr<FrameNetworkingContext> createNetworkingContext() = 0;
                                                         ^
      In file included from WebKit/qt/WidgetApi/qwebpage.cpp:31:
      WebKit/qt/WidgetSupport/QGraphicsWidgetPluginImpl.h:38:18: warning: 'setVisible' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
          virtual void setVisible(bool);
                       ^
      WebKit/qt/WebCoreSupport/QtPluginWidgetAdapter.h:35:18: note: overridden virtual function is here
          virtual void setVisible(bool) = 0;
                       ^
      WebKit/qt/WidgetApi/qwebpage.cpp:500:17: warning: enumeration value 'NoType' not handled in switch [-Wswitch]
              switch (item.type) {
                      ^
      WebKit/qt/WidgetApi/qwebpage.cpp:3146:82: error: no member named 'operator int' in 'QFlags<QWebPage::FindFlag>'
          return d->findText(subString, static_cast<QWebPageAdapter::FindFlag>(options.operator int()));
                                                                               ~~~~~~~ ^
      209 warnings generated.
      220 warnings and 1 error generated.
      make[3]: *** [.obj/debug/WebKit/qt/WidgetApi/qwebpage.o] Error 1
      make[3]: *** Waiting for unfinished jobs....
      174 warnings generated.
      make[2]: *** [debug-all] Error 2
      make[1]: *** [sub-widgetsapi-pri-make_first-ordered] Error 2
      make: *** [sub-Source-QtWebKit-pro-make_first-ordered] Error 2
      

        For Gerrit Dashboard: QTBUG-58316
        # Subject Branch Project Status CR V

            annulen Konstantin Tokarev
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes