Fixed conversion of QWebPage::FindFlags to QWebPageAdapter::FindFlags

After 6255cb893d4 QFlags started to detect signedness of enum type correctly,
changing internal storage type of FindFlags to uint. We should use
FindFlags::Int type now instead of int.

Task-number: QTBUG-58316
Change-Id: Ie346b6062681b49b064fdd9ac0e5897299f4bee5
Reviewed-by: Liang Qi <liang.qi@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>